# ectf_doc_scraper_with_LLM

./: README.md  pyproject.toml
src/ectf_scrape/: cli.py  crawler.py  extract.py  io_utils.py  ollama_processor.py
src/ectf_scrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
